objects/Entitlement.object
<CustomObject>
    <fields>
        <fullName>After__c</fullName>
        <description>Stores number of days in which service needs to be provided after cut off time.</description>
        <inlineHelpText>Stores number of days in which service needs to be provided before cut off time.</inlineHelpText>
        <label>After</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Before_After__c</fullName>
        <description>This Value is mandatory when Call Time is provided. It say whether Before/After Call Time needs to be addressed.</description>
        <label>Before/After</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before</fullName>
                </value>
                <value>
                    <fullName>After</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Before__c</fullName>
        <description>Stores number of days in which service needs to be provided before cut off time.</description>
        <inlineHelpText>Stores number of days in which service needs to be provided before cut off time.</inlineHelpText>
        <label>Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_On__c</fullName>
        <description>Gives the working Business days</description>
        <label>Call On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sun</fullName>
                </value>
                <value>
                    <fullName>Mon</fullName>
                </value>
                <value>
                    <fullName>Tue</fullName>
                </value>
                <value>
                    <fullName>Wed</fullName>
                </value>
                <value>
                    <fullName>Thu</fullName>
                </value>
                <value>
                    <fullName>Fri</fullName>
                </value>
                <value>
                    <fullName>Sat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Time__c</fullName>
        <description>Deadline of Business hours</description>
        <label>Call Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>23:59</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_Type__c</fullName>
        <label>Category Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Division/Department</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>Location Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Category__c</fullName>
        <label>Company Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Container__c</fullName>
        <label>Container</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <description>Auto Number for Entitlement</description>
        <displayFormat>{0}</displayFormat>
        <label>Count</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Equipment_Type__c</fullName>
        <label>Equipment Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Container_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLOW_URL__c</fullName>
        <description>This is technical field to hold hyperlink to display on Email template</description>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;&quot;/flow/Change_Task_Assignment?TaskId=&quot;&amp;Flow_Id_URL__c&amp;&quot;&amp;retURL=&quot;&amp;Flow_Id_URL__c,&quot;TaskRecordLink&quot;)</formula>
        <label>FLOW URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Penalties_Comments__c</fullName>
        <label>Financial Penalties Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Penalties__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Penalties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flow_Id_URL__c</fullName>
        <description>Escalation Task Id</description>
        <label>Flow Id URL</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gold_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gold Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Categorization__c.Category__c</field>
                <operation>equals</operation>
                <valueField>$Source.Category_Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Categorization__c</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location of the Account will be mapped here</description>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Entitlements(Location)</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Type__c</fullName>
        <label>Material Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Waste_Stream</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Override_Business_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this check box is checked, business hours will not be considered for calculating the SLA. This is related to SDT-42452. This was implemented initially for HMD location only. Dated 06/11/2024</description>
        <label>Override Business Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Penalties__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Penalties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Code__c.Client_Account__r.RecordTypeId</field>
                <operation>equals</operation>
                <value>Client</value>
            </filterItems>
            <filterItems>
                <field>Project_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Project Code Detail</value>
            </filterItems>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Project_Code__c.Client_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Code__c</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Project Code of Asset</description>
        <label>Project</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Holds Case Type information</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Ins__c</fullName>
        <label>SLA Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SLA_Instructions__c</fullName>
        <description>This field holds the SLA instructions</description>
        <label>SLA Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Type__c</fullName>
        <description>Schedule type of the Container</description>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Perm</fullName>
                    <isActive>false</isActive>
                    <label>Perm</label>
                </value>
                <value>
                    <fullName>Temp</fullName>
                    <isActive>false</isActive>
                    <label>Temp</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Guarantee_Category_Value__c</fullName>
        <description>Gives the value of the Service Guarantee</description>
        <label>Service Guarantee Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Guarantee_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Same</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Next Day</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Guarantee_Category__c</fullName>
        <description>Whether Service guarantee is based on hours or Days</description>
        <label>Days/Hours</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>Holds Case Sub Type</description>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Case_Sub_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Gives the status of the SLA</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                    <label>Rejected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Customer_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Service__c</columns>
        <columns>Location__c</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <columns>Before_After__c</columns>
        <columns>Call_On__c</columns>
        <columns>Call_Time__c</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ENTITLEMENT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Entitlement.Customer_Entitlements</value>
        </filters>
        <label>All Customer Entitlements</label>
    </listViews>
    <listViews>
        <fullName>All_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Entitlements</label>
    </listViews>
    <listViews>
        <fullName>All_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Entitlements</label>
    </listViews>
    <listViews>
        <fullName>All_Industry_Based_SLA</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>Request_Type__c</columns>
        <columns>Service__c</columns>
        <columns>Location__c</columns>
        <columns>Container__c</columns>
        <columns>Before__c</columns>
        <columns>After__c</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ENTITLEMENT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Entitlement.Industry_SLA</value>
        </filters>
        <label>All Industry Based SLA</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_Entitlements</fullName>
        <active>true</active>
        <description>Used for creating entitlements</description>
        <label>Customer Entitlements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Industry_SLA</fullName>
        <active>true</active>
        <description>Use it for industry based SLAs</description>
        <label>Industry SLA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Premium_Service</fullName>
        <active>true</active>
        <label>Premium Service</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Asset_Error</fullName>
        <active>true</active>
        <description>Container, Asset and Project are mutually exclusive. Entitlement should have only one of the three.</description>
        <errorConditionFormula>OR(IF( NOT(ISBLANK( AssetId )), 
IF( OR(NOT(ISBLANK(TEXT(Container__c))), NOT(ISBLANK(Project_Code__c)), 
NOT(ISBLANK(TEXT(Schedule_Type__c)))),True,False ),False),
IF( NOT(ISBLANK( Project_Code__c)), 
IF( OR(NOT(ISBLANK(TEXT(Container__c))), NOT(ISBLANK(AssetId)), 
NOT(ISBLANK(TEXT(Schedule_Type__c)))),True,False ),False))</errorConditionFormula>
        <errorMessage>Container, Asset and Project are mutually exclusive. You may enter only one of the three in the Entitlement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Before_After_Mandatory</fullName>
        <active>true</active>
        <description>When Call Time field is populated Before/After field is mandatory</description>
        <errorConditionFormula>AND( NOT($User.Bypass_Validation__c), IF(NOT( ISBLANK( TEXT(Call_Time__c) ) ), ISBLANK( TEXT( Before_After__c )), NOT(ISBLANK( TEXT( Before_After__c )))))</errorConditionFormula>
        <errorDisplayField>Before_After__c</errorDisplayField>
        <errorMessage>Complete this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Financial_Penalties_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(Contractual__c), Financial_Penalties__c )</errorConditionFormula>
        <errorMessage>Financial Penalties can be checked only if Contractual is marked Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Financial_Penalties_Comments_Required</fullName>
        <active>true</active>
        <description>Financial Penalities Comment should be mandatory if Financial Penalties checkbox is marked Yes.</description>
        <errorConditionFormula>AND( Financial_Penalties__c , ISBLANK( Financial_Penalties_Comments__c ))</errorConditionFormula>
        <errorMessage>Please Provide Financial Penalities Comments</errorMessage>
    </validationRules>
</CustomObject>